# YoutubeViewsPredictor

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API_DOCS.md  CHEATSHEET.md  CONTRIBUTING.md  DOCS_INDEX.md  Dockerfile  EXAMPLES.md  FAQ.md  GETTING_STARTED.md  IMPROVEMENTS.md  INDEX.md  LICENSE  Makefile  PROJECT_OUTLINE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  TECHNICAL_DOCS.md  USAGE_GUIDE.md  YOUTUBE_DATASET_GUIDE.md  api.py  app.py  config.yaml  docker-compose.yml  example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_basic.py  test_comprehensive.py  test_data_loader.py  train_model.py
.github/workflows/: ci.yml
models/: model_config.json
notebooks/: analysis_example.ipynb
utils/: __init__.py  config.py  data_loader.py  feature_engineering.py  logging_config.py  model_training.py  validators.py
