[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-views-predictor"
version = "1.0.0"
description = "Machine learning system to predict YouTube video views"
readme = "README.md"
authors = [
    {name = "shree-crypto", email = "shree-crypto@users.noreply.github.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["youtube", "views", "prediction", "machine-learning", "ml", "xgboost"]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.1.3,<2.3.0",
    "numpy>=1.26.2,<2.0.0",
    "scikit-learn>=1.3.2,<1.6.0",
    "xgboost>=2.0.2,<3.0.0",
    "lightgbm>=4.1.0,<5.0.0",
    "streamlit>=1.28.2,<2.0.0",
    "matplotlib>=3.8.2,<4.0.0",
    "seaborn>=0.13.0,<0.14.0",
    "plotly>=5.18.0,<6.0.0",
    "nltk>=3.8.1,<4.0.0",
    "textblob>=0.17.1,<0.19.0",
    "joblib>=1.3.2,<2.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "fastapi>=0.104.0,<0.120.0",
    "uvicorn>=0.24.0,<0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pylint>=3.0.0,<4.0.0",
    "flake8>=6.1.0,<8.0.0",
    "black>=23.11.0,<25.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.7.0,<2.0.0",
    "pre-commit>=3.5.0,<4.0.0",
]
api = [
    "transformers>=4.35.2,<4.50.0",
    "torch>=2.2.0",
    "google-api-python-client>=2.108.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/shree-crypto/YoutubeViewsPredictor"
Documentation = "https://github.com/shree-crypto/YoutubeViewsPredictor#readme"
Repository = "https://github.com/shree-crypto/YoutubeViewsPredictor.git"
Issues = "https://github.com/shree-crypto/YoutubeViewsPredictor/issues"

[project.scripts]
youtube-predictor-train = "train_model:train_model"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["utils"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
